other/rec-req/replace-ingress-hosts/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: replace-ingress-hosts
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: ../replace-ingress-hosts.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: kuttlresource.yaml
    - assert:
        file: resource-mutated.yaml
